# StackInspectors

./: .gitignore  .gitmodules  420_real.py  420_sitl.py  424.py  4_20_instance.py  Basefileforlineofbestfit  Basefileforlineofbestfit.py  Drone.py  Drone_Class.py  Drone_Controller.py  Drone_Instance.py  Drone_Realistic_Physics_Class.py  FPSFPV.py  GUI.py  GUI_Test.py  Guided_Drone_Class.py  Instance_Drone_Class_SITL.py  Instance_Drone_Launch_Land_Realistic_Physics.py  Instance_Drone_Realistic_Physics.py  Lidar_Sim_Class.py  Lidar_and_Wall_Simulator.py  Lidar_and_Wall_Simulator_With_GUI.py  PreWallfollowbasecode.py  Q_Ground_Control_Class.py  Q_Ground_Control_Instance.py  README.md  STABILIZE.py  Stack-Inspectors.code-workspace  State_Experimentations.py  Test_for_older_lidar_simulator.py  V2_Lidar_Sim_Class.py  classes_structure_functions.py  config.json  cursor_control.py  drone_on_leash.py  example-config.json  hardware.html  index.html  keyboard.py  (+15 more)
Irrelevant_Files/: HW4_Num1.mlx  HW4_Num2_Part2.mlx  userdistancegui.py
Reference_Files/: Instance_Drone_Class_SITL.py  square_off.py
data/: README.md  firstrun terminal output.txt  s2lidar.py  secondrun terminal output.txt
pdf/: basePlateWAM.dxf
py_folder_rplidar_sdk/: .gitignore  CMakeLists.txt  s2lidar.cpp
src/: README.md  main424.py  requirements.txt
src/Irrelevant_Files/: 4_20_instance.py  HW4_Num2_Part2.mlx  HW4_Num2_Part2_pretest.mlx  State_Experimentations.py
src/Reference_Files/: Instance_Drone_Realistic_Physics.py  Midterm_Drone_Instance.py  PreWallfollowbasecode.py  connectDisconnect.py  (+1 more)
